alteração na descrição do tema

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="card">
                 <img src="./img/img-desafio.png">
                 <h5>Easy Shopping</h5>
-                <p>Easy Shooping uma pagina criada para treina Resposividade.</p>
+                <p>Easy Shooping uma pagina criada para treina Responsividade.</p>
                 <a href="https://marcoa-dev10.github.io/Easy-Shopping/" target="_blank">Ver Projeto</a>
             </div>
 
